[package]
name = "encoder"
version = "0.0.0"
publish = false
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ffmpeg = { version = "0.3", default-features = false, features = ["format"] }
futures = "0.3"
redis = "0.17"
regex = "1.4"
rusoto_sqs = { version = "0.45", default-features = false, features = ["rustls"] }
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros", "process"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
